# wx-calc

./: .editorconfig  CMakeLists.txt  README.md  copy_dll.py  copy_wx_lib.py
src/: CMakeLists.txt
src/wx_calc/: CMakeLists.txt  CalcApp.cpp  CalcApp.h  CustomLogWindow.cpp  CustomLogWindow.h
src/wx_calc_common/: wx_calc_common.h
src/wx_calc_kernel/: CMakeLists.txt  CalcKernel.cpp  CalcKernel.h
test/: CMakeLists.txt  test_kernel.cpp  testmain.cpp
